--- a/app/views/templates/contactInfo.html
+++ b/app/views/templates/contactInfo.html
@@ -20,6 +20,10 @@
 			<input type = "email" class="form-control" ng-model="contact.email" ng-change="contact.$save()">
 		</div>
 		<div class = "form-group">
+			<label>Skype</label>
+			<input type = "text" class="form-control" ng-model="contact.skype" ng-change="contact.$save()">
+		</div>
+		<div class = "form-group">
 			<label>Address</label>
 			<textarea class="form-control" ng-model="contact.address" ng-change="contact.$save()"></textarea>
 		</div>					
